po file updated from develop at 2019-01-25 20:38

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -427,6 +427,15 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr ""
+"هل تريد تثبيت الصورة :\n"
+"%s"
 
 #, python-format
 msgid ""
@@ -1054,6 +1063,9 @@ msgstr ""
 
 msgid "Alternative"
 msgstr "بديل"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #
 msgid "Alternative numbering mode"
@@ -1880,6 +1892,9 @@ msgstr "مسح السجل"
 msgid "Clear playlist"
 msgstr "مسح قائمة العرض"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2592,6 +2607,10 @@ msgstr ""
 msgid "Debug to file"
 msgstr "حذف الملف"
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "وضع الاستعداد العميق"
+
 msgid "Deep standby"
 msgstr "وضع الاستعداد العميق"
 
@@ -2841,6 +2860,16 @@ msgstr "عرض محتويات 4:3 كـ"
 #
 msgid "Display >16:9 content as"
 msgstr ""
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "عرض دليل البرامج للقناة الحالية..."
 
 msgid "Display and userinterface"
 msgstr "عرض و واجهة المستخدم"
@@ -3321,6 +3350,9 @@ msgstr "ادخل رمز Pin"
 msgid "Enter URL"
 msgstr "ادخل الرابط"
 
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
+
 msgid "Enter if you are in the east or west hemisphere."
 msgstr "أدخل إذا كنت في نصف الكرة الغربي أو الغرب."
 
@@ -3800,12 +3832,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "سيتم تنفيذ المهام الأتية بعد أن تضغط موافق !"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4168,6 +4194,9 @@ msgstr "قرص صلب"
 
 msgid "Harddisk Setup"
 msgstr "إعدادات القرص الصلب"
+
+msgid "Harddisk is not in sleepmode it could be in use!"
+msgstr ""
 
 msgid "Hardware: "
 msgstr "هاردوير: "
@@ -5734,9 +5763,6 @@ msgstr "لا يوجد مساحه كافيه على القرص، من فضلك ح
 msgid "Not tested:"
 msgstr "لم يتم اختباره:"
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6763,16 +6789,6 @@ msgstr ""
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
 msgstr "التسجيل قيد التنفيذ أو سيبدأ فى ثوان قليلة"
-
-#, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
-msgstr ""
-"التسجيل قيد التنفيذ أو سيبدأ فى ثوان قليلة!\n"
-"هل لازلت تريد تثبيت الصورة\n"
-"%s?"
 
 msgid "Recordings"
 msgstr "تسجيلات"
@@ -8587,6 +8603,10 @@ msgstr "وضع الاستعداد"
 msgid "Standby / restart"
 msgstr "وضع الاستعداد/إعادة تشغيل"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "وضع الاستعداد"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -8600,9 +8620,6 @@ msgid "Standby fan %d voltage"
 msgstr "مروحه %d فولتيه"
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 #
@@ -9771,6 +9788,9 @@ msgid "Turkmenistan"
 msgstr "تركى"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
