--- a/po/ca.po
+++ b/po/ca.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2007-08-14 10:23+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: \n"
@@ -368,6 +368,14 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Vols fer una recerca de canals?"
 
 #, python-format
 msgid ""
@@ -1047,6 +1055,9 @@ msgstr ""
 #, fuzzy
 msgid "Alternative"
 msgstr "afegir alternatives"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #
 #, fuzzy
@@ -1924,6 +1935,9 @@ msgstr "Esborrar log"
 msgid "Clear playlist"
 msgstr "netejar la llista"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2703,6 +2717,11 @@ msgstr "Ha fallat l'eliminació!"
 
 #
 #, fuzzy
+msgid "Deep Standby LED"
+msgstr "Apagat complet"
+
+#
+#, fuzzy
 msgid "Deep standby"
 msgstr "Apagat complet"
 
@@ -2972,6 +2991,17 @@ msgstr ""
 #
 msgid "Display >16:9 content as"
 msgstr ""
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Mostrar la barra en canviar el programa"
 
 msgid "Display and userinterface"
 msgstr ""
@@ -3487,6 +3517,9 @@ msgstr ""
 msgid "Enter URL"
 msgstr ""
 
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
+
 msgid "Enter if you are in the east or west hemisphere."
 msgstr ""
 
@@ -3999,12 +4032,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr ""
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4385,6 +4412,9 @@ msgid "Harddisk"
 msgstr "Disc dur"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -6027,9 +6057,6 @@ msgstr ""
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -7152,13 +7179,6 @@ msgstr ""
 
 #
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr ""
-
-#, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr ""
 
 #
@@ -9092,6 +9112,11 @@ msgstr "Repòs"
 msgid "Standby / restart"
 msgstr "Repòs / Reiniciar"
 
+#
+#, fuzzy
+msgid "Standby LED"
+msgstr "Repòs"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -9104,9 +9129,6 @@ msgid "Standby fan %d voltage"
 msgstr ""
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 #
@@ -10280,6 +10302,9 @@ msgid "Turkmenistan"
 msgstr "Turc"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
