--- a/po/fa.po
+++ b/po/fa.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -357,6 +357,13 @@ msgstr "%d:%02d"
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "آیا میخواهید ایمیج را در %s دانلود کنید ؟"
 
 #, python-format
 msgid ""
@@ -962,6 +969,9 @@ msgstr ""
 #, fuzzy
 msgid "Alternative"
 msgstr "حالت رادیو متناوب"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 msgid "Alternative numbering mode"
 msgstr ""
@@ -1775,6 +1785,9 @@ msgstr "پاک سازی گزارش"
 msgid "Clear playlist"
 msgstr "ذخیره لیست پخش"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2504,6 +2517,10 @@ msgid "Debug to file"
 msgstr "حذف ناموفق"
 
 #, fuzzy
+msgid "Deep Standby LED"
+msgstr "خاموشی کامل"
+
+#, fuzzy
 msgid "Deep standby"
 msgstr "خاموشی کامل"
 
@@ -2746,6 +2763,16 @@ msgstr "نمایش محتوای 4:3 به صورت"
 
 msgid "Display >16:9 content as"
 msgstr "نمایش محتوای 16:9 به صورت"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "نمایش نوار اطلاعات هنگام تعویض رخداد"
 
 #
 #, fuzzy
@@ -3200,6 +3227,9 @@ msgid "Enter PIN"
 msgstr ""
 
 msgid "Enter URL"
+msgstr ""
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
 msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
@@ -3672,12 +3702,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "وظایف زیر بعد از فشار دادن دکمه OK انجام خواهند شد"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4024,6 +4048,9 @@ msgid "Harddisk"
 msgstr "هارد"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5500,9 +5527,6 @@ msgstr "فضای کافی وجود ندارد ، لطفا مقداری فضا خ
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6484,13 +6508,6 @@ msgid "Recording type"
 msgstr "نوع ضبط"
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr ""
-
-#, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr ""
 
 msgid "Recordings"
@@ -8242,6 +8259,10 @@ msgstr "خاموشی موقت"
 msgid "Standby / restart"
 msgstr "خاموشی موقت / راه اندازی مجدد"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "چراغ حالت خاموش"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -8257,9 +8278,6 @@ msgstr "خاموشی موقت فن %d ولتاژ"
 
 msgid "Standby in "
 msgstr ""
-
-msgid "StandbyLED"
-msgstr "چراغ حالت خاموش"
 
 msgid "Start from the beginning"
 msgstr "شروع از ابتدای کار"
@@ -9311,6 +9329,9 @@ msgid "Turkmenistan"
 msgstr ""
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
