--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -371,6 +371,14 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Wolle jo no nei kanalen sykje ?"
 
 #, python-format
 msgid ""
@@ -1059,6 +1067,9 @@ msgstr ""
 #, fuzzy
 msgid "Alternative"
 msgstr "alernatief tafoegje"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #
 #, fuzzy
@@ -1953,6 +1964,9 @@ msgstr "Log wiskje"
 msgid "Clear playlist"
 msgstr "ofspiellyst leeg meitsje"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2758,6 +2772,11 @@ msgstr "triem ferwiderje"
 
 #
 #, fuzzy
+msgid "Deep Standby LED"
+msgstr "Sliip stand"
+
+#
+#, fuzzy
 msgid "Deep standby"
 msgstr "Sliip stand"
 
@@ -3031,6 +3050,17 @@ msgstr "4:3 ynhâld sjen litte as"
 #
 msgid "Display >16:9 content as"
 msgstr ""
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Ynfobalke sjen litte by barren wiksel"
 
 msgid "Display and userinterface"
 msgstr ""
@@ -3556,6 +3586,9 @@ msgstr ""
 msgid "Enter URL"
 msgstr ""
 
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
+
 msgid "Enter if you are in the east or west hemisphere."
 msgstr ""
 
@@ -4076,12 +4109,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr ""
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4463,6 +4490,9 @@ msgid "Harddisk"
 msgstr "Hurde skiif"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -6135,9 +6165,6 @@ msgstr "Net genôch diskrûmte. Rûmje wat rotzooi op en besykje opnei. (%d MB n
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -7274,14 +7301,6 @@ msgstr ""
 
 #
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "In Opnimmen is dwaande of start binnen in pear sekonden!"
-
-#
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "In Opnimmen is dwaande of start binnen in pear sekonden!"
 
 #
@@ -9249,6 +9268,11 @@ msgstr "Paraatmode"
 msgid "Standby / restart"
 msgstr "Paraatmode / Nijstart"
 
+#
+#, fuzzy
+msgid "Standby LED"
+msgstr "Paraatmode"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -9261,9 +9285,6 @@ msgid "Standby fan %d voltage"
 msgstr ""
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 #
@@ -10488,6 +10509,9 @@ msgid "Turkmenistan"
 msgstr "Turks"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
