--- a/po/hr.po
+++ b/po/hr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2008-01-27 23:38+0100\n"
 "Last-Translator: Jurica <jurica@clarkdigital.com>\n"
 "Language-Team:  <jurica@dream-multimedia.eu>\n"
@@ -364,6 +364,14 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Želite li napraviti skeniranje usluga?"
 
 #, python-format
 msgid ""
@@ -1052,6 +1060,9 @@ msgstr ""
 #, fuzzy
 msgid "Alternative"
 msgstr "dodaj alternative"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #
 #, fuzzy
@@ -1930,6 +1941,9 @@ msgstr "Obriši log"
 msgid "Clear playlist"
 msgstr "očisti Playlistu"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2715,6 +2729,11 @@ msgstr "Brisanje neuspješno!"
 
 #
 #, fuzzy
+msgid "Deep Standby LED"
+msgstr "Isključi Dreambox"
+
+#
+#, fuzzy
 msgid "Deep standby"
 msgstr "Isključi Dreambox"
 
@@ -2986,6 +3005,17 @@ msgstr ""
 #
 msgid "Display >16:9 content as"
 msgstr ""
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Prikaži info traku pri promjeni događaja"
 
 msgid "Display and userinterface"
 msgstr ""
@@ -3501,6 +3531,9 @@ msgstr ""
 msgid "Enter URL"
 msgstr ""
 
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
+
 msgid "Enter if you are in the east or west hemisphere."
 msgstr ""
 
@@ -4012,12 +4045,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr ""
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4397,6 +4424,9 @@ msgid "Harddisk"
 msgstr "Tvrdi disk"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -6043,9 +6073,6 @@ msgstr ""
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -7168,13 +7195,6 @@ msgstr ""
 
 #
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr ""
-
-#, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr ""
 
 #
@@ -9113,6 +9133,11 @@ msgstr "Stanje sprem."
 msgid "Standby / restart"
 msgstr "stanje sprem./ restart"
 
+#
+#, fuzzy
+msgid "Standby LED"
+msgstr "Stanje sprem."
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -9125,9 +9150,6 @@ msgid "Standby fan %d voltage"
 msgstr ""
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 #
@@ -10300,6 +10322,9 @@ msgid "Turkmenistan"
 msgstr "Turski"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
