--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno\n"
 "Language-Team: \n"
@@ -371,6 +371,13 @@ msgstr "%2d:%02d"
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Anda ingin mengunduh image ke %s ?"
 
 #, python-format
 msgid ""
@@ -971,6 +978,9 @@ msgstr "Juga pada standby"
 
 msgid "Alternative"
 msgstr "Alternatif"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 msgid "Alternative numbering mode"
 msgstr "Mode penomoran alternatif"
@@ -1769,6 +1779,9 @@ msgstr "Bersihkan log"
 msgid "Clear playlist"
 msgstr "Bersihkan daftarputar"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr "Gandakan layar TV ke LCD"
 
@@ -2482,6 +2495,10 @@ msgstr "Tanggal/waktu input"
 msgid "Debug to file"
 msgstr "Hapus file"
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "Deep standby"
+
 msgid "Deep standby"
 msgstr "Deep standby"
 
@@ -2721,6 +2738,16 @@ msgstr "Tampilkan isi 4:3 sebagai"
 
 msgid "Display >16:9 content as"
 msgstr "Tampilkan isi >16:9 sebagai"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Tampilkan EPG pada kanal sekarang..."
 
 msgid "Display and userinterface"
 msgstr "Display dan antarmuka pengguna"
@@ -3177,6 +3204,9 @@ msgstr "Masukkan PIN"
 #, fuzzy
 msgid "Enter URL"
 msgstr "Masukkan PIN"
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
 msgstr ""
@@ -3643,12 +3673,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "Following tasks will be done after you press OK!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -3990,6 +4014,9 @@ msgid "Harddisk"
 msgstr "Harddisk"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5430,9 +5457,6 @@ msgstr "Not enough disk space. Please free up some disk space and try again. (%d
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6404,13 +6428,6 @@ msgid "Recording type"
 msgstr "Recording type"
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Recording(s) are in progress or coming up in few seconds!"
-
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Recording(s) are in progress or coming up in few seconds!"
 
 msgid "Recordings"
@@ -8112,6 +8129,10 @@ msgstr "Standby"
 msgid "Standby / restart"
 msgstr "Standby / restart"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "Standby"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -8124,9 +8145,6 @@ msgid "Standby fan %d voltage"
 msgstr "Standby fan %d voltage"
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 msgid "Start from the beginning"
@@ -9189,6 +9207,9 @@ msgid "Turkmenistan"
 msgstr "Turki"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
