--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -381,6 +381,13 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Viltu hlaða niður stýrikerfinu á %s ?"
 
 #, python-format
 msgid ""
@@ -1052,6 +1059,9 @@ msgstr ""
 #, fuzzy
 msgid "Alternative"
 msgstr "bæta við valkosti"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #, fuzzy
 msgid "Alternative numbering mode"
@@ -1881,6 +1891,9 @@ msgstr "Tæma lista"
 msgid "Clear playlist"
 msgstr "hreinsa spilunarlista"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2637,6 +2650,11 @@ msgstr "eyða skrá"
 
 #
 #, fuzzy
+msgid "Deep Standby LED"
+msgstr "Djúp biðstaða"
+
+#
+#, fuzzy
 msgid "Deep standby"
 msgstr "Djúp biðstaða"
 
@@ -2909,6 +2927,17 @@ msgstr "Sýna 4:3 innihald sem"
 #
 msgid "Display >16:9 content as"
 msgstr "Sýna >16:9 efni sem"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Sýna upplýsinga borða við breytingu á atriði"
 
 #
 #, fuzzy
@@ -3427,6 +3456,9 @@ msgstr ""
 msgid "Enter URL"
 msgstr ""
 
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
+
 msgid "Enter if you are in the east or west hemisphere."
 msgstr ""
 
@@ -3932,12 +3964,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "Eftirfarandi aðgerðir verða framkvæmdar eftir að þú ýtir á OK!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4322,6 +4348,9 @@ msgid "Harddisk"
 msgstr "Harður diskur"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5990,9 +6019,6 @@ msgstr "Ekki nóg diskpláss. Taktu til á diskinum og reyndu aftur. (%d MB þar
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -7120,14 +7146,6 @@ msgstr ""
 
 #
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Upptaka (tökur) eru í gangi núna eða eru væntanlegar fljótlega!"
-
-#
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Upptaka (tökur) eru í gangi núna eða eru væntanlegar fljótlega!"
 
 #
@@ -9088,6 +9106,11 @@ msgstr "Biðstaða"
 msgid "Standby / restart"
 msgstr "Biðstaða / Endurræsing"
 
+#
+#, fuzzy
+msgid "Standby LED"
+msgstr "Biðstaða"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -9100,9 +9123,6 @@ msgid "Standby fan %d voltage"
 msgstr "%d Volt á viftu í biðstöðu "
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 #
@@ -10328,6 +10348,9 @@ msgid "Turkmenistan"
 msgstr "Tyrkneska"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
