--- a/po/ku.po
+++ b/po/ku.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 Kurdish translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -374,6 +374,13 @@ msgstr "%2d:%02d"
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Do you want to download the image to %s ?"
 
 #, python-format
 msgid ""
@@ -969,6 +976,9 @@ msgstr ""
 
 msgid "Alternative"
 msgstr "Evé din"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 msgid "Alternative numbering mode"
 msgstr "Evé din numara"
@@ -1762,6 +1772,9 @@ msgstr "Clear log"
 msgid "Clear playlist"
 msgstr "Clear playlist"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2470,6 +2483,10 @@ msgstr "Date/time input"
 msgid "Debug to file"
 msgstr "Delete file"
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "Deep standby"
+
 msgid "Deep standby"
 msgstr "Deep standby"
 
@@ -2708,6 +2725,16 @@ msgstr "Display 4:3 content as"
 
 msgid "Display >16:9 content as"
 msgstr "Display >16:9 content as"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Show EPG for current channel..."
 
 msgid "Display and userinterface"
 msgstr "Display and userinterface"
@@ -3162,6 +3189,9 @@ msgid "Enter PIN"
 msgstr ""
 
 msgid "Enter URL"
+msgstr ""
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
 msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
@@ -3623,12 +3653,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "Following tasks will be done after you press OK!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -3969,6 +3993,9 @@ msgid "Harddisk"
 msgstr "Harddisk"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5405,9 +5432,6 @@ msgstr "Not enough disk space. Please free up some disk space and try again. (%d
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6377,13 +6401,6 @@ msgid "Recording type"
 msgstr "Recording type"
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Recording(s) are in progress or coming up in few seconds!"
-
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Recording(s) are in progress or coming up in few seconds!"
 
 msgid "Recordings"
@@ -8085,6 +8102,10 @@ msgstr "Standby"
 msgid "Standby / restart"
 msgstr "Bigiri / Nu Vegeri"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "Standby"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -8097,9 +8118,6 @@ msgid "Standby fan %d voltage"
 msgstr "Standby fan %d voltage"
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 msgid "Start from the beginning"
@@ -9162,6 +9180,9 @@ msgid "Turkmenistan"
 msgstr "Turkish"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
