--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-16 19:14+0200\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -989,6 +989,9 @@ msgstr "Arī pēc gaidstāves"
 
 msgid "Alternative"
 msgstr "Alternatīvas"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 msgid "Alternative numbering mode"
 msgstr "Alternatīvais numuru režīms"
@@ -2471,6 +2474,10 @@ msgstr "Datuma/laika ievade"
 msgid "Debug to file"
 msgstr "Rakstīt drabību failā"
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "Izslēgt"
+
 msgid "Deep standby"
 msgstr "Izslēgt"
 
@@ -2707,6 +2714,17 @@ msgstr "Attēlot 4:3 saturu"
 
 msgid "Display >16:9 content as"
 msgstr "Attēlot >16:9 saturu"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG info for current event"
+msgstr "Saglabāt laika aizturi tikai pašreizējai pārraidei"
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Rādīt EPG pašreizējam kanālam..."
 
 msgid "Display and userinterface"
 msgstr "Attēla un lietotāja interfeiss"
@@ -3151,6 +3169,9 @@ msgstr "Ievadiet PIN"
 
 msgid "Enter URL"
 msgstr "Adrese (URL)"
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
 msgstr "Ievadiet, ja esat austrumu vai rietumu puslodē."
@@ -7992,6 +8013,10 @@ msgstr "Gaidstāve"
 msgid "Standby / restart"
 msgstr "Izslēgšana"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "GaidstāvesLED"
+
 msgid "Standby after current event"
 msgstr "Gaidstāve pēc pašreizējās pārraides"
 
@@ -8005,9 +8030,6 @@ msgstr "Ventilatora spriegums %d gaidstāvē"
 
 msgid "Standby in "
 msgstr "Gaidstāvē "
-
-msgid "StandbyLED"
-msgstr "GaidstāvesLED"
 
 msgid "Start from the beginning"
 msgstr "Sākt no sākuma"
@@ -9074,6 +9096,10 @@ msgstr "Turkmenistāna"
 
 msgid "Turks and Caicos Islands"
 msgstr "Turks un Kaikosas salas"
+
+#, fuzzy
+msgid "Turn on the power LED during deep standby."
+msgstr "Ieslēgt LED gaidstāvē"
 
 msgid "Turn on the power LED during standby."
 msgstr "Ieslēgt LED gaidstāvē"
