--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2018-11-12 17:39+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -383,6 +383,15 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr ""
+"Czy chcesz zainstalować image\n"
+"%s"
 
 #, python-format
 msgid ""
@@ -978,6 +987,9 @@ msgstr "Także przy wyjściu ze standby"
 
 msgid "Alternative"
 msgstr "Alternatywne"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 msgid "Alternative numbering mode"
 msgstr "Alternatywny tryb numerowania"
@@ -1759,6 +1771,9 @@ msgstr "Wyczyść log"
 msgid "Clear playlist"
 msgstr "Wyczyść playlistę"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr "Klonuj obraz z tv na LCD"
 
@@ -2459,6 +2474,10 @@ msgstr "Czas / Data"
 msgid "Debug to file"
 msgstr "Debug do pliku"
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "Głębokie czuwanie"
+
 msgid "Deep standby"
 msgstr "Głębokie czuwanie"
 
@@ -2695,6 +2714,17 @@ msgstr "Wyświetlaj zawartość 4:3 jako"
 
 msgid "Display >16:9 content as"
 msgstr "Wyświetlaj zawartość >16:9 jako"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG info for current event"
+msgstr "Zapisz timeshift tylko dla bieżącego wydarzenia"
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Pokaż EPG dla aktualnego kanału..."
 
 msgid "Display and userinterface"
 msgstr "Wyświetlacz i interfejs użytkownika"
@@ -3142,6 +3172,9 @@ msgstr "Wprowadź PIN"
 
 msgid "Enter URL"
 msgstr "Wprowadź adres"
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
 msgstr "Wprowadź czy jesteś na wschodniej czy zachodniej półkuli."
@@ -3618,12 +3651,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "Poniższe zadania będą wykonane po wciśnięciu OK!"
 
-msgid "Force LNB Power"
-msgstr "Wymuś zasilanie LNB"
-
-msgid "Force ToneBurst"
-msgstr "Wymuś ToneBurst"
-
 msgid "Force legacy signal stats"
 msgstr "Wymuś starszy typ statystyk sygnału"
 
@@ -3957,6 +3984,9 @@ msgstr "Dysk twardy"
 
 msgid "Harddisk Setup"
 msgstr "Ustawienia dysku HDD"
+
+msgid "Harddisk is not in sleepmode it could be in use!"
+msgstr ""
 
 msgid "Hardware: "
 msgstr "Sprzęt: "
@@ -5373,9 +5403,6 @@ msgstr "Nie wystarczająca ilość przestrzeni dyskowej. Zwolnij miejsce na dysk
 msgid "Not tested:"
 msgstr "Nieprzetestowane:"
 
-msgid "Not yet implemented!"
-msgstr "Jeszcze nie zaimplementowane!"
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr "Uwaga: gdy właczone, a chcesz przejść do standby po wybudzeniu, ustaw opcje 'Startup to Standby' na 'Nie, z wyjątkiem timera wybudzania'"
 
@@ -6335,16 +6362,6 @@ msgstr "Typ nagrania"
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
 msgstr "Nagrywanie(a) jest w toku lub rozpocznie się za kilka sekund!"
-
-#, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
-msgstr ""
-"Nagrywanie(a) jest w toku lub rozpocznie się za kilka sekund!\n"
-"Czy na pewno chcesz rozpocząć wgrywanie image\n"
-"%s?"
 
 msgid "Recordings"
 msgstr "Nagrania"
@@ -8022,6 +8039,10 @@ msgstr "Czuwanie"
 msgid "Standby / restart"
 msgstr "Czuwanie / Restart"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "Dioda w trybie czuwania"
+
 msgid "Standby after current event"
 msgstr "Przejdź w tryb czuwania po bieżącym wydarzeniu"
 
@@ -8035,9 +8056,6 @@ msgstr "Wiatrak w standby %d napięcie"
 
 msgid "Standby in "
 msgstr "Tryb czuwania za"
-
-msgid "StandbyLED"
-msgstr "Dioda w trybie czuwania"
 
 msgid "Start from the beginning"
 msgstr "Rozpocznij od początku"
@@ -9115,6 +9133,10 @@ msgstr ""
 
 msgid "Turks and Caicos Islands"
 msgstr "Wyspy Turks i Caicos"
+
+#, fuzzy
+msgid "Turn on the power LED during deep standby."
+msgstr "Włączaj diodę zasilania w trybie czuwania"
 
 msgid "Turn on the power LED during standby."
 msgstr "Włączaj diodę zasilania w trybie czuwania"
