--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -371,6 +371,13 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Realizar o download da imagem para %s ?"
 
 #, python-format
 msgid ""
@@ -967,6 +974,9 @@ msgstr ""
 
 msgid "Alternative"
 msgstr "Adicionar alternativas"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 msgid "Alternative numbering mode"
 msgstr "Modo numeração alternativa"
@@ -1756,6 +1766,9 @@ msgstr "Limpar registro"
 msgid "Clear playlist"
 msgstr "Limpar lista de reprodução"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2464,6 +2477,10 @@ msgstr "Informe a data/hora"
 msgid "Debug to file"
 msgstr "Remover arquivo"
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "Desligar"
+
 msgid "Deep standby"
 msgstr "Desligar"
 
@@ -2702,6 +2719,17 @@ msgstr "Exibir 4:3 como"
 
 msgid "Display >16:9 content as"
 msgstr "Exibir 16:9 como"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG info for current event"
+msgstr "Em espera após o evento atual"
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "EPG do canal atual"
 
 msgid "Display and userinterface"
 msgstr "Tela e interface visual"
@@ -3156,6 +3184,9 @@ msgid "Enter PIN"
 msgstr ""
 
 msgid "Enter URL"
+msgstr ""
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
 msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
@@ -3616,12 +3647,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "As tarefas irão terminar após pressionar OK!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -3962,6 +3987,9 @@ msgid "Harddisk"
 msgstr "Disco rígido"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5397,9 +5425,6 @@ msgstr "Espaço insuficiente no disco. Libere espaço e tente novamente. (%d MB 
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6371,13 +6396,6 @@ msgid "Recording type"
 msgstr "Tipo de gravação"
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Há gravações em andamento ou iniciando nos próximos instantes!"
-
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Há gravações em andamento ou iniciando nos próximos instantes!"
 
 msgid "Recordings"
@@ -8078,6 +8096,10 @@ msgstr "Espera/StandBy"
 msgid "Standby / restart"
 msgstr "Desligar"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "Espera/StandBy"
+
 msgid "Standby after current event"
 msgstr "Em espera após o evento atual"
 
@@ -8091,9 +8113,6 @@ msgstr "Tensão do vent. em StandBy %d"
 
 msgid "Standby in "
 msgstr "Em espera em "
-
-msgid "StandbyLED"
-msgstr ""
 
 msgid "Start from the beginning"
 msgstr "Começar do início"
@@ -9155,6 +9174,9 @@ msgid "Turkmenistan"
 msgstr "Turco"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
