--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -360,6 +360,13 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Doriti sa instalati pachetul:\n"
 
 #, python-format
 msgid ""
@@ -962,6 +969,9 @@ msgstr ""
 #, fuzzy
 msgid "Alternative"
 msgstr "adauga alternative"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #, fuzzy
 msgid "Alternative numbering mode"
@@ -1767,6 +1777,9 @@ msgstr "Sterge logul"
 msgid "Clear playlist"
 msgstr "sterge playlist"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2498,6 +2511,10 @@ msgid "Debug to file"
 msgstr "sterge file"
 
 #, fuzzy
+msgid "Deep Standby LED"
+msgstr "Oprire completa"
+
+#, fuzzy
 msgid "Deep standby"
 msgstr "Oprire completa"
 
@@ -2740,6 +2757,16 @@ msgstr "Afiseaza continutul format 4:3 ca"
 
 msgid "Display >16:9 content as"
 msgstr "Afiseaza continutul format >16:9 ca"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Arata bara de informatii la schimbarea evenimentelor"
 
 #, fuzzy
 msgid "Display and userinterface"
@@ -3202,6 +3229,9 @@ msgid "Enter PIN"
 msgstr ""
 
 msgid "Enter URL"
+msgstr ""
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
 msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
@@ -3672,12 +3702,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr ""
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4024,6 +4048,9 @@ msgid "Harddisk"
 msgstr "Hard disc"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5503,9 +5530,6 @@ msgstr "Nu este spatiu suficient. Va rugam eliberati din spatiu si incercati din
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6493,13 +6517,6 @@ msgid "Recording type"
 msgstr ""
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Inregistrarea este in curs sau incepe in cateva secunde!"
-
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Inregistrarea este in curs sau incepe in cateva secunde!"
 
 msgid "Recordings"
@@ -8254,6 +8271,10 @@ msgstr "Asteptare"
 msgid "Standby / restart"
 msgstr "Asteptare / Restart"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "Asteptare"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -8266,9 +8287,6 @@ msgid "Standby fan %d voltage"
 msgstr ""
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 msgid "Start from the beginning"
@@ -9352,6 +9370,9 @@ msgid "Turkmenistan"
 msgstr "Turca"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
