--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -413,6 +413,13 @@ msgstr "%2d:%02d"
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Želite presneti sliko k %s?"
 
 #, python-format
 msgid ""
@@ -1109,6 +1116,9 @@ msgstr "Tudi v stanju pripravljenosti"
 #
 msgid "Alternative"
 msgstr "Dodajanje alternativ"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #
 msgid "Alternative numbering mode"
@@ -2014,6 +2024,9 @@ msgstr "Izbris dnevnika"
 msgid "Clear playlist"
 msgstr "Počisti seznam predvajanja"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2803,6 +2816,11 @@ msgid "Debug to file"
 msgstr "Izbris datoteke"
 
 #
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "Globoko spanje"
+
+#
 msgid "Deep standby"
 msgstr "Globoko spanje"
 
@@ -3080,6 +3098,18 @@ msgstr "Prikaz 4:3 razmerja slike"
 #
 msgid "Display >16:9 content as"
 msgstr "Prikaz >16:9 razmerja slike"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG info for current event"
+msgstr "Shrani datoteko časovnega zamika samo za trenutni dogodek"
+
+#
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Prikaz EPG za trenutni kanal"
 
 msgid "Display and userinterface"
 msgstr "Zaslon in uporabniški vmesnik"
@@ -3617,6 +3647,9 @@ msgstr ""
 msgid "Enter URL"
 msgstr ""
 
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
+
 msgid "Enter if you are in the east or west hemisphere."
 msgstr ""
 
@@ -4140,12 +4173,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "Sledeče naloge bodo opravljene, ko pritisnete OK!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4526,6 +4553,9 @@ msgstr "Trdi disk"
 
 msgid "Harddisk Setup"
 msgstr "Trdi disk"
+
+msgid "Harddisk is not in sleepmode it could be in use!"
+msgstr ""
 
 msgid "Hardware: "
 msgstr "Sprejemnik: "
@@ -6178,9 +6208,6 @@ msgstr "Ni dovolj prostora! Sprostite prostor na disku in poizkusite ponovno (%d
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -7320,14 +7347,6 @@ msgstr "Vrsta snemanja"
 
 #
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Snemanje se izvaja ali se bo začelo izvajati v nekaj sekundah!"
-
-#
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Snemanje se izvaja ali se bo začelo izvajati v nekaj sekundah!"
 
 #
@@ -9304,6 +9323,11 @@ msgid "Standby / restart"
 msgstr "Možnosti izklopa sprejemnika"
 
 #
+#, fuzzy
+msgid "Standby LED"
+msgstr "Stanje pripravljenosti"
+
+#
 msgid "Standby after current event"
 msgstr "Stanje pripravljenosti po trenutnem dogodku"
 
@@ -9320,10 +9344,6 @@ msgstr "Ventilator v stanju pripravljenosti %d voltaža"
 #
 msgid "Standby in "
 msgstr "Stanje pripravljenosti v"
-
-#
-msgid "StandbyLED"
-msgstr ""
 
 #
 msgid "Start from the beginning"
@@ -10537,6 +10557,10 @@ msgstr "Turško"
 
 msgid "Turks and Caicos Islands"
 msgstr ""
+
+#, fuzzy
+msgid "Turn on the power LED during deep standby."
+msgstr " "
 
 msgid "Turn on the power LED during standby."
 msgstr " "
