--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -396,6 +396,13 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "Da li želite da skinete imidž u %s ?"
 
 #, python-format
 msgid ""
@@ -1093,6 +1100,9 @@ msgstr ""
 #, fuzzy
 msgid "Alternative"
 msgstr "dodaj alternative"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 #
 #, fuzzy
@@ -2004,6 +2014,9 @@ msgstr "Obriši log"
 msgid "Clear playlist"
 msgstr "očisti Plejlistu"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2822,6 +2835,11 @@ msgstr "Obriši datoteku"
 
 #
 #, fuzzy
+msgid "Deep Standby LED"
+msgstr "Isključi Drimbox"
+
+#
+#, fuzzy
 msgid "Deep standby"
 msgstr "Isključi Drimbox"
 
@@ -3094,6 +3112,17 @@ msgstr "Prikaži 4:3 sadržaj kao"
 #
 msgid "Display >16:9 content as"
 msgstr "Prikaži >16:9 sadržaj kao"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Prikaži info traku pri promeni događaja"
 
 #
 #, fuzzy
@@ -3628,6 +3657,9 @@ msgstr ""
 msgid "Enter URL"
 msgstr ""
 
+msgid "Enter an URL where alternative images could be listed for FlashImage"
+msgstr ""
+
 msgid "Enter if you are in the east or west hemisphere."
 msgstr ""
 
@@ -4151,12 +4183,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "Sledeći zadaci će biti urađeni kad pritisnete OK!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -4544,6 +4570,9 @@ msgid "Harddisk"
 msgstr "Hard disk"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -6235,9 +6264,6 @@ msgstr "Nedovoljno prostora na disku. Molimo oslobodite nešto prostora i probaj
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -7386,14 +7412,6 @@ msgstr ""
 
 #
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Snimanje u toku ili počinje za nekoliko sekundi!"
-
-#
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Snimanje u toku ili počinje za nekoliko sekundi!"
 
 #
@@ -9387,6 +9405,11 @@ msgstr "Spreman"
 msgid "Standby / restart"
 msgstr "Spreman / restart"
 
+#
+#, fuzzy
+msgid "Standby LED"
+msgstr "Spreman"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -9401,9 +9424,6 @@ msgid "Standby fan %d voltage"
 msgstr "Ventilator spreman %d Voltage"
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 #
@@ -10639,6 +10659,9 @@ msgid "Turkmenistan"
 msgstr "Turski"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
