--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -367,6 +367,13 @@ msgstr "%2d:%02d"
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr "%s bellenimini indirmek istiyor musunuz?"
 
 #, python-format
 msgid ""
@@ -962,6 +969,9 @@ msgstr "Bekleme Modunda"
 
 msgid "Alternative"
 msgstr "Alternatif"
+
+msgid "Alternative URL for images listed on FlashImage"
+msgstr ""
 
 msgid "Alternative numbering mode"
 msgstr "Alternatif numaralandırma modu"
@@ -1756,6 +1766,9 @@ msgstr "Kayıt günlüğünü sil"
 msgid "Clear playlist"
 msgstr "Çalma listesini temizle"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr "TV ekranını LCD ye yansıt"
 
@@ -2470,6 +2483,10 @@ msgstr "Tarih/Saat girişi"
 msgid "Debug to file"
 msgstr "Dosy Sil"
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "Derin Uyku"
+
 msgid "Deep standby"
 msgstr "Derin Uyku"
 
@@ -2709,6 +2726,17 @@ msgstr "4:3 içeriği şu şekilde göster"
 
 msgid "Display >16:9 content as"
 msgstr ">16:9 içeriği şu şekilde göster"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+#, fuzzy
+msgid "Display EPG info for current event"
+msgstr "Zaman Kaydırmayı kaydet geçerli olay için"
+
+#, fuzzy
+msgid "Display EPG list for current channel"
+msgstr "Mevcut kanal için EPG göster..."
 
 msgid "Display and userinterface"
 msgstr "Görüntüleme ve kullanıcı arayüzü"
@@ -3162,6 +3190,9 @@ msgid "Enter PIN"
 msgstr ""
 
 msgid "Enter URL"
+msgstr ""
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
 msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
@@ -3630,12 +3661,6 @@ msgstr ""
 msgid "Following tasks will be done after you press OK!"
 msgstr "Belirtilen görevler OK'a basmanızın ardından işleme alınacak!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -3979,6 +4004,9 @@ msgstr "Sabitdisk"
 
 msgid "Harddisk Setup"
 msgstr "Sabit Disk Kurulumu"
+
+msgid "Harddisk is not in sleepmode it could be in use!"
+msgstr ""
 
 msgid "Hardware: "
 msgstr "Donanım: "
@@ -5416,9 +5444,6 @@ msgstr "Yetersiz disk alanı. Disk alanı boşaltarak tekrar deneyin. (%d MB ger
 msgid "Not tested:"
 msgstr ""
 
-msgid "Not yet implemented!"
-msgstr ""
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr "Not:  "
 
@@ -6393,13 +6418,6 @@ msgid "Recording type"
 msgstr "Kayıt tipi"
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "Kayıt işlemi devam ediyor veya birkaç saniye içinde başlayacak!"
-
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "Kayıt işlemi devam ediyor veya birkaç saniye içinde başlayacak!"
 
 msgid "Recordings"
@@ -8099,6 +8117,10 @@ msgstr "Hazırda beklet"
 msgid "Standby / restart"
 msgstr "Kapatma"
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "Bekleme LED'i"
+
 msgid "Standby after current event"
 msgstr "Geçerli olaydan sonra Uyku Moduna Geç"
 
@@ -8112,9 +8134,6 @@ msgstr "Fan bekleme modu %d voltaj"
 
 msgid "Standby in "
 msgstr "Bekleme modunda"
-
-msgid "StandbyLED"
-msgstr "Bekleme LED'i"
 
 msgid "Start from the beginning"
 msgstr "En baştan başla"
@@ -9195,6 +9214,10 @@ msgstr "Türkçe"
 
 msgid "Turks and Caicos Islands"
 msgstr ""
+
+#, fuzzy
+msgid "Turn on the power LED during deep standby."
+msgstr "H.Bekleme modunda LED açık kalsın"
 
 msgid "Turn on the power LED during standby."
 msgstr "H.Bekleme modunda LED açık kalsın"
