--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: 2016-06-17 12:13+0800\n"
 "Last-Translator: nx111 <gdzdz@163.com>\n"
 "Language-Team: NEWBOLT\n"
@@ -361,6 +361,13 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr " 是否下载映像到 \"%s\"?"
 
 #, python-format
 msgid ""
@@ -945,6 +952,9 @@ msgid "Also on standby"
 msgstr ""
 
 msgid "Alternative"
+msgstr ""
+
+msgid "Alternative URL for images listed on FlashImage"
 msgstr ""
 
 msgid "Alternative numbering mode"
@@ -1730,6 +1740,9 @@ msgstr "清除日志"
 msgid "Clear playlist"
 msgstr "清除播放列表"
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2434,6 +2447,10 @@ msgstr "日期/时间输入"
 msgid "Debug to file"
 msgstr ""
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "深度休眠"
+
 msgid "Deep standby"
 msgstr "深度休眠"
 
@@ -2672,6 +2689,15 @@ msgstr "显示4:3内容"
 
 msgid "Display >16:9 content as"
 msgstr "显示 >16:9 内容"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+msgid "Display EPG list for current channel"
+msgstr ""
 
 msgid "Display and userinterface"
 msgstr ""
@@ -3122,6 +3148,9 @@ msgid "Enter PIN"
 msgstr ""
 
 msgid "Enter URL"
+msgstr ""
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
 msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
@@ -3583,12 +3612,6 @@ msgstr "安装不成功!\n"
 msgid "Following tasks will be done after you press OK!"
 msgstr ""
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -3927,6 +3950,9 @@ msgid "Harddisk"
 msgstr "硬盘"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5358,10 +5384,6 @@ msgstr ""
 msgid "Not tested:"
 msgstr ""
 
-#, fuzzy
-msgid "Not yet implemented!"
-msgstr "功能不可用"
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6328,13 +6350,6 @@ msgid "Recording type"
 msgstr ""
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "录制正在进行中或刚开始录制不久!"
-
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "录制正在进行中或刚开始录制不久!"
 
 msgid "Recordings"
@@ -8023,6 +8038,10 @@ msgstr "待机"
 msgid "Standby / restart"
 msgstr ""
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "待机"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -8035,9 +8054,6 @@ msgid "Standby fan %d voltage"
 msgstr ""
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 msgid "Start from the beginning"
@@ -9072,6 +9088,9 @@ msgid "Turkmenistan"
 msgstr "土耳其语"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
