--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-05 18:53+0100\n"
+"POT-Creation-Date: 2019-01-25 20:37+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -358,6 +358,13 @@ msgstr ""
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr ""
+
+#, fuzzy, python-format
+msgid ""
+"%s\n"
+"Do you still want to flash image\n"
+"%s?"
+msgstr " 是否安裝套裝軟體:\n"
 
 #, python-format
 msgid ""
@@ -940,6 +947,9 @@ msgid "Also on standby"
 msgstr ""
 
 msgid "Alternative"
+msgstr ""
+
+msgid "Alternative URL for images listed on FlashImage"
 msgstr ""
 
 msgid "Alternative numbering mode"
@@ -1727,6 +1737,9 @@ msgstr "清除日誌"
 msgid "Clear playlist"
 msgstr ""
 
+msgid "Client is streaming from this box!"
+msgstr ""
+
 msgid "Clone TV screen to LCD"
 msgstr ""
 
@@ -2433,6 +2446,10 @@ msgstr ""
 msgid "Debug to file"
 msgstr ""
 
+#, fuzzy
+msgid "Deep Standby LED"
+msgstr "待機"
+
 msgid "Deep standby"
 msgstr ""
 
@@ -2671,6 +2688,15 @@ msgstr "顯示4:3內容"
 
 msgid "Display >16:9 content as"
 msgstr "顯示 >16:9 內容"
+
+msgid "Display EPG as MultiEPG"
+msgstr ""
+
+msgid "Display EPG info for current event"
+msgstr ""
+
+msgid "Display EPG list for current channel"
+msgstr ""
 
 msgid "Display and userinterface"
 msgstr ""
@@ -3118,6 +3144,9 @@ msgid "Enter PIN"
 msgstr ""
 
 msgid "Enter URL"
+msgstr ""
+
+msgid "Enter an URL where alternative images could be listed for FlashImage"
 msgstr ""
 
 msgid "Enter if you are in the east or west hemisphere."
@@ -3582,12 +3611,6 @@ msgstr "安裝不成功!\n"
 msgid "Following tasks will be done after you press OK!"
 msgstr "按下 OK 鍵後將完成以下任務!"
 
-msgid "Force LNB Power"
-msgstr ""
-
-msgid "Force ToneBurst"
-msgstr ""
-
 msgid "Force legacy signal stats"
 msgstr ""
 
@@ -3925,6 +3948,9 @@ msgid "Harddisk"
 msgstr "硬碟"
 
 msgid "Harddisk Setup"
+msgstr ""
+
+msgid "Harddisk is not in sleepmode it could be in use!"
 msgstr ""
 
 msgid "Hardware: "
@@ -5356,10 +5382,6 @@ msgstr ""
 msgid "Not tested:"
 msgstr ""
 
-#, fuzzy
-msgid "Not yet implemented!"
-msgstr "功能不可用"
-
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
 msgstr ""
 
@@ -6327,13 +6349,6 @@ msgid "Recording type"
 msgstr ""
 
 msgid "Recording(s) are in progress or coming up in few seconds!"
-msgstr "錄製正在進行中或剛開始錄製不久!"
-
-#, fuzzy, python-format
-msgid ""
-"Recording(s) are in progress or coming up in few seconds!\n"
-"Do you still want to flash image\n"
-"%s?"
 msgstr "錄製正在進行中或剛開始錄製不久!"
 
 msgid "Recordings"
@@ -8030,6 +8045,10 @@ msgstr "待機"
 msgid "Standby / restart"
 msgstr ""
 
+#, fuzzy
+msgid "Standby LED"
+msgstr "待機"
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -8042,9 +8061,6 @@ msgid "Standby fan %d voltage"
 msgstr ""
 
 msgid "Standby in "
-msgstr ""
-
-msgid "StandbyLED"
 msgstr ""
 
 msgid "Start from the beginning"
@@ -9081,6 +9097,9 @@ msgid "Turkmenistan"
 msgstr "土耳其語"
 
 msgid "Turks and Caicos Islands"
+msgstr ""
+
+msgid "Turn on the power LED during deep standby."
 msgstr ""
 
 msgid "Turn on the power LED during standby."
